sakura-ns-dev/db/mongo-stateful-set-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: csc301.tokyotech.org
