sakura-ns-dev/db/adminer-ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adminer

spec:
  routes:
    - kind: Rule
      match: Host(`adminer.ns-dev.trap.jp`)
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - kind: Service
          name: adminer
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
